<resources>
  <string name="app_name">Hillforts of Ireland</string>
  <string name="hint_placemarkTitle">Placemark Title</string>
  <string name="button_addPlacemark">Add Placemark</string>
  <string name="hint_placemarkDescription">Description </string>
  <string name="menu_addPlacemark">Add</string>
  <string name="menu_list">List</string>
  <string name="menu_cancelPlacemark">Cancel</string>
  <string name="enter_placemark_title"> Please enter a Placemark Title </string>
  <string name="save_placemark"> Save Placemark </string>
  <string name="button_addImage"> Add Image </string>
  <string name="select_placemark_image">Select placemark image</string>
  <string name="change_placemark_image">Change placemark image</string>
  <string name="button_location">Set Location</string>
  <string name="title_activity_map">Map</string>
  <string name="menu_deletePlacemark">Delete</string>
  <string name="placemarkTitle">Placemark Title</string>
  <string name="placemarkDescription">Placemark Description</string>
  <string name="placemarkPicture">Placemark Picture</string>
  <string name="menu_savePlacemark">Save</string>
  <string name="title_activity_placemark_list">Placemarks</string>
  <string name="title_activity_placemark">Placemark</string>
  <string name="title_activity_location">Placemark</string>
  <string name="title_activity_login"> Signup/Login to Placemark</string>
  <string name="menu_showMap">Show Map</string>
  <string name="menu_logout">Logout</string>


  <string name="action_addplacemark">Add Placemark</string>
  <string name="action_report">Report</string>
  <string name="Title">Welcome Homer</string>
  <string name="donateSubtitle">Please Give Generously</string>
  <string name="addPlacemarkButton">Add Placemark</string>
  <string name="paypal">PayPal</string>
  <string name="direct">Direct</string>
  <string name="amount">Amount</string>
  <string name="total">Total so Far</string>
  <string name="totalSoFar">$ Total</string>
  <string name="reportTitle">Donations Report</string>
  <string name="defaultAmount">00</string>
  <string name="defaultMethod">N/A</string>
  <string name="enter_amount">Enter Amount</string>

  <string name="title_activity_home">Home</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Hillforts of Ireland</string>
  <string name="nav_header_subtitle">voteforhomer@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_donate">Donate</string>
  <string name="menu_report">Report</string>
  <string name="menu_favourites">Favourites</string>
  <string name="menu_about">About Us</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>

  <string name="aboutus_title">Hillforts of Ireland</string>
  <string name="aboutus_message">Archaeological Fieldwork : Part II\n\nMobile Application Development\n\n HDIP Computer Science</string>

  <string name="messageLoading">Please wait while we Connect to the Server...</string>

  <string name="action_edit">Edit Donation</string>
  <string name="action_update">Update</string>
  <string name="message_edit">Please Update your Details Below</string>

  <!-- START Firebase Resources-->

  <string name="label_emailpassword">Email/Password Authentication</string>
  <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
  <string name="sign_in">Sign In</string>
  <string name="create_account">Create Account</string>
  <string name="send_link">Send Link</string>
  <string name="sign_out">Sign Out</string>
  <string name="verify_email">Verify Email</string>
  <string name="disconnect">Disconnect</string>
  <string name="loading">Loading…</string>
  <string name="signed_in">Signed In</string>
  <string name="signed_out">Signed Out</string>
  <string name="token_null">Token: null</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="desc_firebase_lockup">Firebase logo and name</string>
  <string name="auth_failed">Authentication failed</string>
  <string name="firebase_status_fmt">Firebase User: %s</string>
  <string name="firebase_user_management">Firebase User Management</string>
  <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="emailpassword_title_text">Please Login Below</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

  <!--END Firebase Resources-->




</resources>