<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@color/colorAccent"
      android:fitsSystemWindows="true"
      app:elevation="0dip"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorPrimary" />

  </com.google.android.material.appbar.AppBarLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="75dp"
      android:layout_weight="3"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="359dp"
        android:contentDescription="@string/desc_firebase_lockup"
        android:src="@drawable/landing" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/title_bottom_margin"
        android:text="@string/emailpassword_title_text"
        android:textColor="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.MyTitleText" />

    <TextView
        android:id="@+id/status"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/signed_out"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        tools:text="Firebase User ID: 123456789abc" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

  </LinearLayout>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="@color/colorWhite"
      android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

      <EditText
          android:id="@+id/email"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/hint_email"
          android:inputType="textEmailAddress"
          android:autofillHints="" />

      <EditText
          android:id="@+id/password"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/emailPasswordFields"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

      <Button
          android:id="@+id/logIn"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/sign_in"
          android:theme="@style/ThemeOverlay.MyDarkButton" />

      <Button
          android:id="@+id/signUp"
          style="@style/Widget.AppCompat.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/create_account"
          android:theme="@style/ThemeOverlay.MyDarkButton" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0">


    </LinearLayout>

  </RelativeLayout>

</LinearLayout>
